--- a/study.html
+++ b/study.html
@@ -29,6 +29,7 @@
             </nav>
         </div>
     </aside>
+    <div class="menuSpacing"></div>
     <section id="study" class="whiteBg section">
         <div class="mainContent gridOneContentStudy">
             <h2 class="gridMainHeadingStudy">Faculty</h2>
