--- a/top3Work.html
+++ b/top3Work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -29,41 +29,26 @@
             </nav>
         </div>
     </aside>
+    <div class="menuSpacing"></div>
     <section id="top3" class="whiteBg section">
-        <div class=" gridOneContent">
-            <h2 class="gridMainHeading">Top 3 works</h2>
-            <p class="gridDescription">I'll be listing the top 3 works I do the most:</p>
+        <div class="gridOneContent">
+            <h2 class="gridMainHeading">Top 3 Works</h2>
+            <p class="gridDescription">Here are the top 3 areas where I focus my work:</p>
 
             <div class="grid">
                 <article>
-                    <h3>Java with SpringBoot</h3>
-                    <p>As part of my work experience, I have extensively utilized Java Spring Boot framework to develop
-                        robust
-                        and scalable applications. Leveraging the power of Spring Boot, I have contributed to the
-                        development of
-                        efficient backend systems, ensuring smooth functionality and high performance.
-                    </p>
+                    <h3>Front-End Development (React, JavaScript, HTML, CSS)</h3>
+                    <p>I am a development in building dynamic and responsive user interfaces using React, JavaScript, HTML, and CSS. From designing intuitive layouts to implementing advanced front-end logic, I ensure seamless user experiences with a focus on modern web standards.</p>
                 </article>
+                
                 <article>
-                    <h3>Web Development (JavaScript, HTML, CSS, React)</h3>
-                    <p>I have been involved in various web development projects where I utilized a combination of
-                        JavaScript,
-                        HTML, CSS, and React. From crafting responsive and visually appealing user interfaces to
-                        implementing
-                        complex frontend logic, I have demonstrated proficiency in full-stack web development, ensuring
-                        seamless
-                        user experiences.
-                    </p>
+                    <h3>Styling Frameworks (Tailwind, Bootstrap, Shadcn)</h3>
+                    <p>Utilizing Tailwind, Bootstrap, and Shadcn, I create clean and responsive designs that enhance both the aesthetics and usability of web applications. I focus on delivering fluid, accessible interfaces that maintain consistency across various devices and platforms.</p>
                 </article>
+                
                 <article>
-                    <h3>Database</h3>
-                    <p>Database management is a crucial aspect of modern application development, and I have hands-on
-                        experience
-                        working with various database systems. From designing efficient database schemas to optimizing
-                        query
-                        performance, I have played a key role in ensuring data integrity and reliability for our
-                        applications.
-                    </p>
+                    <h3>Back-End and Database (Java, Spring Boot, SQL)</h3>
+                    <p>Though my primary focus is on front-end development, I have basic experience with Java, Spring Boot, and SQL databases. This knowledge allows me to collaborate effectively with back-end teams, ensuring smooth integration between the front-end and back-end systems.</p>
                 </article>
             </div>
         </div>
