--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
             <h1><a href="">Matheus Henrique 👨🏻‍💻</a></h1>
             <nav>
                 <ul>
-                    <li><a href="aboutMe.html">About me</a></li>
+                    <li><a href="aboutMe.html">About Me</a></li>
                     <li><a href="work.html">Work</a></li>
                     <li><a href="top3Work.html">Top 3 Works</a></li>
                     <li><a href="study.html">Study</a></li>
@@ -33,30 +33,37 @@
     <section id="work" class="whiteBg section">
         <div class="mainContent workContent">
             <div class="workText">
-                <h2>Work Experience</h2>
+                <h2>Work</h2>
                 <p>
-                    Throughout my career, I've had the opportunity to work on various challenging projects. <br> <br>I
-                    highlight
-                    my experience with Java and Spring Boot, where I developed efficient and scalable applications. <br>
-                    <br>
-                    I've
-                    also been involved in web development projects, using JavaScript, HTML, CSS, and React to create
-                    responsive interfaces and frontend logic. <br> <br>
-                    Additionally, I've gained skills in database management,
-                    ensuring data integrity and reliability. <br> <br>
-                    In addition to the mentioned projects, I have experience in Linux environments. I also have
-                    knowledge in Python and C, acquired during my studies in Systems Analysis and Development. I also
-                    learned about computer networks and have a little knowledge of artificial intelligence with Azure
-                    Microsoft. <br> <br>
-                    I'm always seeking continuous learning and exploring new technologies to enhance my skills and stay
-                    updated.
+                    I am Matheus Henrique, a front-end developer specializing in creating efficient and scalable web solutions. With a solid foundation in both front-end and back-end development, I contribute to all phases of a project, ensuring consistent and high-quality results. <br><br>
+
+                    🔧 <strong>Technical Skills</strong> <br><br>
+                    - <strong>Languages:</strong> Java, JavaScript, TypeScript <br>
+                    - <strong>Back-end Framework:</strong> Spring Boot <br>
+                    - <strong>Front-end:</strong> HTML, CSS, JavaScript, TypeScript, React, Next.js <br>
+                    - <strong>Styling:</strong> Bootstrap, Tailwind, Shadcn <br>
+                    - <strong>Databases:</strong> SQL, MySQL, PostgreSQL <br>
+                    - <strong>Tools:</strong> Git, GitHub, RESTful APIs <br><br>
+
+                    📚 <strong>About Me</strong> <br><br>
+                    I am a front-end developer, particularly focused on using React to build dynamic and responsive interfaces. I am always striving to improve my skills by adopting modern tools and best practices. I work well in teams and believe that collaboration is key to achieving innovative and scalable results. <br><br>
+
+                    💼 <strong>Professional Experience</strong> <br><br>
+                    <strong>Kyros Tecnologia</strong> - Development Intern (1 year) <br>
+                    I utilized a broad range of skills, including Java, Spring Boot, Databases, HTML, CSS, JavaScript, TypeScript, React, Next.js, Bootstrap, Tailwind, and Shadcn. I worked in an agile environment, contributing to the development of web applications, delivering solutions, and driving significant improvements to the projects. <br><br>
+
+                    <strong>Relotec Sistemas de Ponto e Acesso</strong> - System Support (4 months) <br>
+                    I provided technical support and solutions for time and access control systems, ensuring stable and efficient operations. <br><br>
+
+                    I am always seeking new challenges and opportunities to continue learning and improving my skills.
                 </p>
             </div>
+
             <div class="workImg">
-                <img src="/assets/img/spring-boot-svgrepo.svg" alt="Logo do Spring Svg" class="pulse">
-                <img src="/assets/img/java-logo-svgrepo.svg" alt="Logo do java Svg" class="pulse">
-                <img src="/assets/img/database-svgrepo.svg" alt="Logo do Banco de dados Svg" class="imgbanco">
-                <img src="/assets/img/react-svgreposvg.svg" alt="Logo do React Svg" class="imgreact">
+                <img src="/assets/img/spring-boot-svgrepo.svg" alt="Spring Boot Logo" class="pulse">
+                <img src="/assets/img/java-logo-svgrepo.svg" alt="Java Logo" class="pulse">
+                <img src="/assets/img/database-svgrepo.svg" alt="Database Logo" class="imgbanco">
+                <img src="/assets/img/react-svgreposvg.svg" alt="React Logo" class="imgreact">
             </div>
         </div>
     </section>
