--- a/work.html
+++ b/work.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/assets/css/classes.css">
     <link rel="stylesheet" href="/assets/css/menu.css">
     <link rel="stylesheet" href="/assets/css/work.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -18,24 +19,28 @@
         <div class="mainContent menuContent">
             <h1><a href="">Matheus Henrique 👨🏻‍💻</a></h1>
             <nav>
-                <ul>
-                    <li><a href="aboutMe.html">About Me</a></li>
+                <ul id="menu-items">
+                    <li><a href="aboutMe.html">About me</a></li>
                     <li><a href="work.html">Work</a></li>
                     <li><a href="top3Work.html">Top 3 Works</a></li>
                     <li><a href="study.html">Study</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <button id="menu-toggle" class="menu-icon">
+                    <i class="fas fa-bars"></i>
+                </button>
             </nav>
         </div>
     </aside>
-    <div class="menuSpacing"></div>
     <section id="work" class="whiteBg section">
         <div class="mainContent workContent">
             <div class="workText">
                 <h2>Work</h2>
                 <p>
-                    I am Matheus Henrique, a front-end developer specializing in creating efficient and scalable web solutions. With a solid foundation in both front-end and back-end development, I contribute to all phases of a project, ensuring consistent and high-quality results. <br><br>
+                    I am Matheus Henrique, a front-end developer specializing in creating efficient and scalable web
+                    solutions. With a solid foundation in both front-end and back-end development, I contribute to all
+                    phases of a project, ensuring consistent and high-quality results. <br><br>
 
                     🔧 <strong>Technical Skills</strong> <br><br>
                     - <strong>Languages:</strong> Java, JavaScript, TypeScript <br>
@@ -46,14 +51,21 @@
                     - <strong>Tools:</strong> Git, GitHub, RESTful APIs <br><br>
 
                     📚 <strong>About Me</strong> <br><br>
-                    I am a front-end developer, particularly focused on using React to build dynamic and responsive interfaces. I am always striving to improve my skills by adopting modern tools and best practices. I work well in teams and believe that collaboration is key to achieving innovative and scalable results. <br><br>
+                    I am a front-end developer, particularly focused on using React to build dynamic and responsive
+                    interfaces. I am always striving to improve my skills by adopting modern tools and best practices. I
+                    work well in teams and believe that collaboration is key to achieving innovative and scalable
+                    results. <br><br>
 
                     💼 <strong>Professional Experience</strong> <br><br>
                     <strong>Kyros Tecnologia</strong> - Development Intern (1 year) <br>
-                    I utilized a broad range of skills, including Java, Spring Boot, Databases, HTML, CSS, JavaScript, TypeScript, React, Next.js, Bootstrap, Tailwind, and Shadcn. I worked in an agile environment, contributing to the development of web applications, delivering solutions, and driving significant improvements to the projects. <br><br>
+                    I utilized a broad range of skills, including Java, Spring Boot, Databases, HTML, CSS, JavaScript,
+                    TypeScript, React, Next.js, Bootstrap, Tailwind, and Shadcn. I worked in an agile environment,
+                    contributing to the development of web applications, delivering solutions, and driving significant
+                    improvements to the projects. <br><br>
 
                     <strong>Relotec Sistemas de Ponto e Acesso</strong> - System Support (4 months) <br>
-                    I provided technical support and solutions for time and access control systems, ensuring stable and efficient operations. <br><br>
+                    I provided technical support and solutions for time and access control systems, ensuring stable and
+                    efficient operations. <br><br>
 
                     I am always seeking new challenges and opportunities to continue learning and improving my skills.
                 </p>
@@ -67,7 +79,7 @@
             </div>
         </div>
     </section>
-
+    <script src="/assets/js/menu.js"></script>
 </body>
 
 </html>
