--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/assets/css/classes.css">
     <link rel="stylesheet" href="/assets/css/menu.css">
     <link rel="stylesheet" href="/assets/css/aboutMe.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <div class="mainContent menuContent">
             <h1><a href="">Matheus Henrique 👨🏻‍💻</a></h1>
             <nav>
-                <ul>
+                <ul id="menu-items">
                     <li><a href="aboutMe.html">About me</a></li>
                     <li><a href="work.html">Work</a></li>
                     <li><a href="top3Work.html">Top 3 Works</a></li>
@@ -26,10 +27,12 @@
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <button id="menu-toggle" class="menu-icon">
+                    <i class="fas fa-bars"></i>
+                </button>
             </nav>
         </div>
     </aside>
-    <div class="menuSpacing"></div>
     <section id="aboutMe" class="aboutMe blueBg section">
         <div class="mainContent aboutMeContent">
             <div class="aboutMeText" id="text">
@@ -57,6 +60,7 @@
             </div>
         </div>
     </section>
+    <script src="/assets/js/menu.js"></script>
 </body>
 
 </html>
