--- a/projects.html
+++ b/projects.html
@@ -90,11 +90,32 @@
                         <figcaption>Watch sales page - Developed using HTML, CSS and BootStrap.</figcaption>
                     </figure>
                 </div>
+            </div>
+            <p class="titleprojects">Developed using React (Vite | JavaScript | TypeScript)</p>
+            <div class="gridProjects">
                 <div>
-
+                    <figure>
+                        <a href="https://mat-henriqu.github.io/projeto_01_calculadora/" target="_blank">
+                            <img src="/assets/img/calculadora.png" alt="IMG Calculadora">
+                        </a>
+                        <figcaption>Calculator - Developed using React, Vite, MathJs, JavaScript and StyledComponent.</figcaption>
+                    </figure>
                 </div>
                 <div>
-
+                    <figure>
+                        <a href="https://mat-henriqu.github.io/gh_finder_users/" target="_blank">
+                            <img src="/assets/img/gitHubFinderUser.png" alt="IMG Random">
+                        </a>
+                        <figcaption>GitHub Finder User - Developed using React, Vite and TypeScript</figcaption>
+                    </figure>
+                </div>
+                <div>
+                    <figure>
+                        <a href="https://mat-henriqu.github.io/lista_de_tarefas/" target="_blank">
+                            <img src="/assets/img/tarefas.png" alt="Time Loft">
+                        </a>
+                        <figcaption>ToDo List - Developed using React, Vite and JavaScript</figcaption>
+                    </figure>
                 </div>
             </div>
         </div>
