--- a/top3Work.html
+++ b/top3Work.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/assets/css/menu.css">
     <link rel="stylesheet" href="/assets/css/top3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://unpkg.com/i18next@20.6.1/dist/umd/i18next.min.js"></script>
 </head>
 
 <body>
@@ -26,6 +27,9 @@
                     <li><a href="study.html">Study</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <button class="menu-language" onclick="toggleLanguage()">
+                        <i class="fa-solid fa-language"></i>
+                    </button>
                 </ul>
                 <button id="menu-toggle" class="menu-icon">
                     <i class="fas fa-bars"></i>
@@ -35,28 +39,29 @@
     </aside>
     <section id="top3" class="whiteBg section">
         <div class="gridOneContent">
-            <h2 class="gridMainHeading">Top 3 Works</h2>
-            <p class="gridDescription">Here are the top 3 areas where I focus my work:</p>
+            <h2 class="gridMainHeading" id="top3Title"></h2>
+            <p class="gridDescription" id="top3Text"></p>
 
             <div class="grid">
                 <article>
-                    <h3>Front-End Development (React, JavaScript, HTML, CSS)</h3>
-                    <p>I am a development in building dynamic and responsive user interfaces using React, JavaScript, HTML, and CSS. From designing intuitive layouts to implementing advanced front-end logic, I ensure seamless user experiences with a focus on modern web standards.</p>
+                    <h3 id="frontendTitle"></h3>
+                    <p id="frontendText"></p>
                 </article>
-                
+
                 <article>
-                    <h3>Styling Frameworks (Tailwind, Bootstrap, Shadcn)</h3>
-                    <p>Utilizing Tailwind, Bootstrap, and Shadcn, I create clean and responsive designs that enhance both the aesthetics and usability of web applications. I focus on delivering fluid, accessible interfaces that maintain consistency across various devices and platforms.</p>
+                    <h3 id="stylingTitle"></h3>
+                    <p id="stylingText"></p>
                 </article>
-                
+
                 <article>
-                    <h3>Back-End and Database (Java, Spring Boot, SQL)</h3>
-                    <p>Though my primary focus is on front-end development, I have basic experience with Java, Spring Boot, and SQL databases. This knowledge allows me to collaborate effectively with back-end teams, ensuring smooth integration between the front-end and back-end systems.</p>
+                    <h3 id="backendTitle"></h3>
+                    <p id="backendText"></p>
                 </article>
             </div>
         </div>
     </section>
     <script src="/assets/js/menu.js"></script>
+    <script src="/assets/js/i18nTop3Work.js"></script>
 </body>
 
 </html>
