Adição do curriculo no work

--- a/work.html
+++ b/work.html
@@ -30,6 +30,11 @@
                     <button class="menu-language" onclick="toggleLanguage()">
                         <i class="fa-solid fa-language"></i>
                     </button>
+                    <a href="/assets/cv/curriculo.pdf" download="curriculo.pdf">
+                        <button class="curriculo">
+                            <i class="fa-solid fa-file-arrow-down"></i> Baixar Currículo
+                        </button>
+                    </a>
                 </ul>
                 <button id="menu-toggle" class="menu-icon">
                     <i class="fas fa-bars"></i>
