Ajuste do link do curriculo

--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
                     <button class="menu-language" onclick="toggleLanguage()">
                         <i class="fa-solid fa-language"></i>
                     </button>
-                    <a href="/assets/cv/curriculo.pdf" download="curriculo.pdf">
+                    <a href="/assets/cv/curriculo.pdf" download="curriculo.pdf" class="linkcurriculo">
                         <button class="curriculo">
                             <i class="fa-solid fa-file-arrow-down"></i> Baixar Currículo
                         </button>
