Adição de Projetos feito com JavaScript

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
         <div class="mainContent gridOneContentProjects">
             <h2 class="gridMainHeadingProjects" id="headingProjects"></h2>
             <h2 class="gridDescriptionProjects" id="descriptionProjects"></h2>
-            <p class="titleprojects" id="titleprojectsSimple"></p>
+            <p class="titleprojects" id="titleprojectsHtmCss"></p>
             <div class="gridProjects">
                 <div>
                     <figure>
@@ -68,7 +68,7 @@
                     </figure>
                 </div>
             </div>
-            <p class="titleprojects" id="titleprojectsMid"></p>
+            <p class="titleprojects" id="titleprojectsHtmCssBoot"></p>
             <div class="gridProjects">
                 <div>
                     <figure>
@@ -95,7 +95,35 @@
                     </figure>
                 </div>
             </div>
-            <p class="titleprojects" id="titleprojectsHigh"></p>
+            <p class="titleprojects" id="titleprojectsHtmCssJs"></p>
+            <div class="gridProjects">
+                <div>
+                    <figure>
+                        <a href="https://mat-henriqu.github.io/detonaRalph/" target="_blank">
+                            <img src="/assets/img/detonaRalph.png" alt="Detona Ralph">
+                        </a>
+                        <figcaption>Detona Ralph - Developed using HTML, CSS and JavaScript.</figcaption>
+                    </figure>
+                </div>
+                <div>
+                    <figure>
+                        <a href="https://mat-henriqu.github.io/js-developer-pokedex/" target="_blank">
+                            <img src="/assets/img/pokedex.png" alt="Pokedex">
+                        </a>
+                        <figcaption>Pokedex - Developed using HTML, CSS and JavaScript.</figcaption>
+                    </figure>
+                </div>
+                <div>
+                    <figure>
+                        <a href="https://mat-henriqu.github.io/js-emoji-memory-game/" target="_blank">
+                            <img src="/assets/img/js-emoji-memory-game.png" alt="Pokedex">
+                        </a>
+                        <figcaption>Emoji Memory Game - Developed using HTML, CSS and JavaScript.</figcaption>
+                    </figure>
+                </div>
+
+            </div>
+            <p class="titleprojects" id="titleprojectsReact"></p>
             <div class="gridProjects">
                 <div>
                     <figure>
