Atualiza informações de experiência profissional e adiciona detalhes sobre o estágio

--- a/work.html
+++ b/work.html
@@ -65,6 +65,9 @@
                 <h5 id="kyrosTitle"></h5>
                 <p id="kyrosText"></p>
                 <br>
+                <h5 id="kyrosTitleEstagiario"></h5>
+                <p id="kyrosTextEstagiario"></p>
+                <br>
                 <h5 id="relotecTitle"></h5>
                 <p id="relotecText"></p>
             </div>
