Remove certificado Java e atualiza seção de Linux

--- a/study.html
+++ b/study.html
@@ -116,18 +116,18 @@
                     </a>
                 </div>
             </div>
-            <p class="gridTitleStudy">Java | Linux</p>
+            <p class="gridTitleStudy">Linux</p>
             <div class="gridStudy">
                 <div>
                     <a href="https://hermes.dio.me/certificates/75E34FAF.pdf" target="_blank">
                         <img src="/assets/img/certificadoLinuxDio.jpg" alt="certificado Linux Dio">
                     </a>
                 </div>
-                <div>
+                <!-- <div>
                     <a href="https://hermes.dio.me/certificates/5DQSNIYD.pdf" target="_blank">
                         <img src="/assets/img/certificadoJavaAiPowerEdDIO.jpg" alt="certificado Java Ai PowerEd DIO">
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
